# QtPractice

./: CMakeLists.txt  README.md  main.cpp  window.cpp  window.h
